# interview-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
data/knowledge_base/: agent_basics.md  memory_design.md  multi_agent.md  rag_basics.md  tool_calling.md
docs/: design.md  requirements.md
docs/superpowers/plans/: 2026-05-19-agent-evaluation.md  2026-05-19-agent-interview-coach.md
docs/superpowers/specs/: 2026-05-19-agent-evaluation-design.md  2026-05-19-agent-interview-coach-design.md
evals/datasets/: interview_agent_eval.json
src/: __init__.py  config.py
src/agents/: base.py  coordinator.py  graph.py  interview.py  jd_analyzer.py  post_interview.py  pre_interview.py  resume_agent.py  roles.py  state.py  templates.py  workflow.py
src/cli/: app.py  commands.py  session.py
src/cli/commands/: __init__.py  base.py  builtin.py  data.py  document.py  evaluation.py  jd_resume.py
src/cli/ui/: input_box.py  output.py  spinner.py  theme.py
src/documents/: __init__.py  exporters.py  loaders.py  models.py
src/evaluation/: __init__.py  dataset.py  metrics.py  report.py  run.py  runner.py
src/llm/: client.py
src/memory/: store.py
src/rag/: indexer.py  retriever.py  splitter.py
src/tools/: registry.py
tests/: test_agents.py  test_cli_app.py  test_commands.py  test_config.py  test_document_loaders.py  test_evaluation_metrics.py  test_evaluation_runner.py  test_memory_store.py  test_pdf_exporters.py  test_rag.py  test_tool_registry.py
