[project]
name = "agent-interview-coach-cli"
version = "0.1.0"
description = "A beginner-friendly CLI agent project covering tools, memory, RAG, multi-agent collaboration, and PDF workflows."
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.2.0",
  "langgraph>=0.2.0",
  "langchain-openai>=0.1.0",
  "chromadb>=0.5.0",
  "python-dotenv>=1.0.0",
  "pymupdf>=1.24.0",
  "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

